# pbd

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: compute_capability_query.c
data/assets/: bunny.ply
data/shaders/: fluid_surface_frag.glsl  fluid_surface_vert.glsl  fluid_thickness_frag.glsl  mesh_frag.glsl  mesh_vert.glsl  particle_frag.glsl  particle_vert.glsl  plane_frag.glsl  plane_vert.glsl  screen_rect_frag.glsl  screen_rect_vert.glsl  shadow_mesh_frag.glsl  shadow_mesh_vert.glsl  shadow_particle_frag.glsl  shadow_particle_vert.glsl  shadow_plane_frag.glsl  shadow_plane_vert.glsl
data/shaders_test/: mesh_frag.glsl  mesh_vert.glsl  plane_frag.glsl  plane_vert.glsl  volume_frag.glsl  volume_vert.glsl
src/: aabb.cpp  aabb.h  bvh.cpp  bvh.h  cg_math.cpp  cg_math.h  cuda_helper.h  cuda_math_helper.h  gl_helper.cpp  gl_helper.h  gui.cpp  gui.h  main.cpp  mesh.cpp  mesh.h  misc.cpp  misc.h  numerics.h  scene.cpp  scene.h  scene_cuda.cu  scene_cuda.h  sdf_cuda.cu  sdf_cuda.h  solver.cpp  solver.h  solver_cuda.cu  solver_cuda.h  voxelization_cuda.cu  voxelization_cuda.h
tests/: CMakeLists.txt  decomp_test.cpp  voxel_test.cpp
tests/decomp/: MathFunctions.cpp  MathFunctions.h
tests/voxelization/: voxel_render.cpp  voxel_render.h
